--- a/src/components/otpPage.css
+++ b/src/components/otpPage.css
@@ -31,7 +31,7 @@
     border-bottom: solid 2px  #8BC34A;
     outline: none;
 }
-.btn{
+/* .btn{
     display:inline-block;
     padding:0.35em 1.2em;
     border:0.1em solid #8BC34A;
@@ -52,7 +52,7 @@
     letter-spacing: 1px;
     cursor: pointer;
     
-}
+} */
 .header2 h2{
     padding-top: 10px;
 }
