otp page update

--- a/src/components/otpPage.css
+++ b/src/components/otpPage.css
@@ -1,58 +1,66 @@
-*{
-    margin: 0;
-    font-family: sans-serif;
-    padding: 0;
+* {
+  margin: 0;
+  font-family: sans-serif;
+  padding: 0;
+}
 
+.otp {
+  /* margin-top:55px; */
 }
-.main{
-   
-    width: 244px;
-    position: absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%,-50%);
-    text-align: center;   
-    height: 310px;
+
+.main {
+  /* 
+ 
+ 
+  
+  
+  height: 310px;
+  display: grid; */
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  left: 50%;
+  top: 50%;
+  width: 250px;
 }
-.input-otp{
-    width: 100%;
-    height: 40px;
-    box-sizing: border-box;
-    border:none;
-    border-bottom:solid 2px grey;
-    font-size: 20px;
-    letter-spacing: 2px;
-    text-align: center;
-    color: grey;
-    margin-top: 35px;
-    
+
+.box {
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: solid 2px grey;
+  font-size: 20px;
+  letter-spacing: 2px;
+  text-align: center;
+  color: grey;
+  /* margin-top: 35px; */
 }
-.input-otp:focus{
-    border-bottom: solid 2px  #8BC34A;
-    outline: none;
+
+.input-otp:focus {
+  border-bottom: solid 2px #007bff;
+  outline: none;
 }
-/* .btn{
-    display:inline-block;
-    padding:0.35em 1.2em;
-    border:0.1em solid #8BC34A;
-    margin:0 0.3em 0.3em 0;
-    border-radius:0.12em;
-    box-sizing: border-box;
-    text-decoration:none;
-    font-family:'Roboto',sans-serif;
-    font-weight:300;
-    color:white;
-    background-color: #8BC34A;
-    text-align:center;
-    transition: all 0.2s;
-    font-size: 25px;
-    width: 100%;
-    margin-top: 15px;
-    height: 50px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    
-} */
-.header2 h2{
-    padding-top: 10px;
+
+.btn {
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  /* margin: 0 0.3em 0.3em 0; */
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: white;
+  width: 100%;
+  /* margin-top: 15px; */
+  height: 50px;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+.header2 h2 {
+  /* padding-top: 10px; */
 }
