--- a/src/components/PhoneNo.css
+++ b/src/components/PhoneNo.css
@@ -16,21 +16,18 @@
     text-align: center;   
     
 }
-h1{
-    margin-top: 20px;
-    font-size: 25px;
-    text-align: left;
-    padding-bottom: 10px;
-    
-}
-h2{ 
-    font-size: 12px;
-    text-align: left;
-    padding-bottom: 125px;
-    color:gray;
-}
 
+h4{
+    text-align:left;
+}
+h7{
+    color: silver;
+    padding-bottom:40px;
+    
+    text-align: left;
+}
 .input{
+    margin-top:100px;
     width: 100%;
     height: 40px;
     box-sizing: border-box;
@@ -43,7 +40,7 @@ h2{
     
 }
 .input:focus{
-    border-bottom: solid 2px  #8BC34A;
+    border-bottom: solid 2px  #007bff;
     outline: none;
 }
 
@@ -53,5 +50,11 @@ h2{
     margin-top: 15px;
     height: 50px;
     letter-spacing: 1px;
+    
+}
+.buttonNext{
+    width:100%;
+    margin-top: -10px;
+   
     
 }
