--- a/src/components/PhoneNo.css
+++ b/src/components/PhoneNo.css
@@ -4,10 +4,37 @@
     margin: 0;
     font-family: sans-serif;
     padding: 0;
-    
+   
 
 }
-.main{
+
+.mainPhoneNumber{
+    display:flex;
+   flex-direction: column;
+   justify-content: space-between;
+   position: absolute;
+   transform: translate(-50%, -50%);
+   text-align: left;
+   left: 50%;
+   top: 50%;
+   width: 40%;
+ }
+ 
+ 
+ .headerPhoneNumber{
+       margin-bottom: 100px;
+ }
+
+
+
+
+
+
+
+
+
+
+/* .main{
     
     position: absolute;
     left:50%;
@@ -44,17 +71,11 @@ h7{
     outline: none;
 }
 
-.next-button{
-    font-size: 25px;
-    width: 100%;
-    margin-top: 15px;
-    height: 50px;
-    letter-spacing: 1px;
-    
-}
+
 .buttonNext{
     width:100%;
     margin-top: -10px;
    
     
-}
+} */
+
