different Post Component

--- a/src/components/PostDefault.css
+++ b/src/components/PostDefault.css
@@ -7,7 +7,7 @@
     padding-right: 40px;
     padding-left:  40px;
     border-radius: 10px;
-    background-color:#E4FDE1;
+    background-color:#F4F3EE;
     -webkit-box-shadow: 0px 0px 15px -7px rgba(102,102,102,1);
     -moz-box-shadow: 0px 0px 15px -7px rgba(102,102,102,1);
      box-shadow: 0px 0px 15px -7px rgba(102,102,102,1);
