--- a/src/Pages/Homepage.css
+++ b/src/Pages/Homepage.css
@@ -25,13 +25,13 @@
     justify-content: center;
     align-items: center;
 }
-.homepageheader{
+/* .homepageheader{
     
    display: flex;
    justify-content:space-around;
    background-color: white;
    align-items: center;
-}
+} */
 
 .homepageheader h3{
     font-weight: 700;
@@ -43,7 +43,8 @@
      
      margin:5px;
      padding:20px;
-     background-color:#E4FDE1;
+     background-color:#F4F3EE;
+     
      /* border: solid 1px silver; */
      border-radius: 10px;
      -webkit-box-shadow: 0px 0px 15px -7px rgba(102,102,102,1);
